test-cases/invalid/bad_type.ul
int main() {
    foo bar;
    bar = 1;
}